snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2-sources.jar.sha256
58dd1352bbb74f44882d6fa438804945496bfcda5fa93c90b45f531be39ec9d5